- ISampler: Added void Sample(ref T x) for fast population of existing variables. - Fix: BoxMullerGaussianSample, and ZiggurateSampler.Sample(Span<double> span) did not use the distribution's defined mean and standard deviation. - ZigguratGaussian: Added void Sample(IRandomSource rng, ref double x) method for fast ref based sampling directly into an existing variable. - ZigguratGaussianDistributionBenchmark(s) and BoxMullerGaussianDistributionBenchmark(s) are now based on population of arrays/spans, rather than multiple calls to the singular Sample() method(s).

--- a/Redzen.Benchmarks/Redzen.Benchmarks.csproj
+++ b/Redzen.Benchmarks/Redzen.Benchmarks.csproj
@@ -7,6 +7,7 @@
     <OutputType>Exe</OutputType>
     <StartupObject />
     <ServerGarbageCollection>true</ServerGarbageCollection>
+	<SkipLocalsInit>true</SkipLocalsInit>
   </PropertyGroup>
 
   <ItemGroup>
