--- a/Redzen/Redzen.csproj
+++ b/Redzen/Redzen.csproj
@@ -2,14 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>9.1.2.0</Version>
-    <Copyright>Copyright Colin D. Green 2015-2020</Copyright>
+    <Version>9.1.3.0</Version>
+    <Copyright>Copyright Colin D. Green 2015-2021</Copyright>
     <Description>General purpose C# code library.</Description>
     <PackageProjectUrl>https://github.com/colgreen/Redzen</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>C# .NET rng prng ziggurat gaussian io sorting timsort xoshiro</PackageTags>
-    <PackageReleaseNotes>Fix: Base64EncodingOutputStream.Write() - incorrect offset bound check. (#9)
-</PackageReleaseNotes>
+    <PackageReleaseNotes>Fix: BoxMullerGaussianSampler, BoxMullerGaussianStatelessSampler, ZigguratGaussianSampler, ZigguratGaussianStatelessSampler did not use the defined mean and standard deviation parameters when filling an array with samples.
+	</PackageReleaseNotes>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>colindgreen.pfx</AssemblyOriginatorKeyFile>
     <Authors>Colin D. Green</Authors>
