--- a/.editorconfig
+++ b/.editorconfig
@@ -4,8 +4,9 @@
 dotnet_sort_system_directives_first = true
 dotnet_separate_import_directive_groups = false
 
-# File scoped namespaces.
 csharp_style_namespace_declarations=file_scoped:suggestion
+csharp_space_around_binary_operators = ignore
+csharp_space_around_declaration_statements = ignore
 
 # IDE0055: Fix formatting
 dotnet_diagnostic.IDE0055.severity = none
