--- a/.editorconfig
+++ b/.editorconfig
@@ -13,6 +13,18 @@ dotnet_diagnostic.IDE0055.severity = none
 
 # This is disabled because we use Slice extensively and the suggested simplification results in different IL/asm that is slower to execute (https://github.com/dotnet/roslyn/issues/47629)
 dotnet_diagnostic.IDE0057.severity = none   # IDE0057: Slice can be simplified.
+
+# .NET Analyzers.
+dotnet_diagnostic.CA1000.severity = none    # CA1000: Do not declare static members on generic types.
+dotnet_diagnostic.CA1051.severity = none    # CA1051: Do not declare visible instance fields.
+dotnet_diagnostic.CA1707.severity = none    # CA1707: Identifiers should not contain underscores.
+dotnet_diagnostic.CA1711.severity = none    # CA1711: Identifiers should not have incorrect suffix.
+dotnet_diagnostic.CA1715.severity = none    # CA1715: Identifiers should have correct prefix.
+dotnet_diagnostic.CA1716.severity = none    # CA1716: Identifiers should not match keywords.
+dotnet_diagnostic.CA1720.severity = none    # CA1720: Identifiers should not contain type names.
+dotnet_diagnostic.CA2201.severity = none    # CA2201: Do not raise reserved exception types.
+
+# Style cop analyzers.
 dotnet_diagnostic.SA1000.severity = none    # SA1000: Keywords should be spaced correctly
 dotnet_diagnostic.SA1001.severity = none    # SA1001: Commas should be spaced correctly
 dotnet_diagnostic.SA1002.severity = none    # SA1002: Semicolons should be spaced correctly
