--- a/Redzen.Tests/Redzen.Tests.csproj
+++ b/Redzen.Tests/Redzen.Tests.csproj
@@ -5,6 +5,7 @@
     <IsPackable>false</IsPackable>
 	<ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Redzen</RootNamespace>
+	<AnalysisLevel>latest-Recommended</AnalysisLevel>
   </PropertyGroup>
 
   <ItemGroup>
