- Replace use of IndexOutOfRangeException with ArgumentOutOfRangeException, as the former is for internal use by the runtime/framework only. - Added <NeutralLanguage>en</> to csproj.

--- a/Redzen/Redzen.csproj
+++ b/Redzen/Redzen.csproj
@@ -50,6 +50,7 @@
 		- Enabled SkipLocalsInit compiler setting. This provides a small performance benefit to most (all?) methods.
 	</PackageReleaseNotes>
 	<Authors>Colin D. Green</Authors>
+	<NeutralLanguage>en</NeutralLanguage>
   </PropertyGroup>
 
   <ItemGroup>
