Enabled analyzers for IDisposable.Dispose() not being called.

--- a/.editorconfig
+++ b/.editorconfig
@@ -18,6 +18,8 @@ dotnet_diagnostic.CA1711.severity = none    # An identifier has an incorrect suf
 dotnet_diagnostic.CA1715.severity = none    # Identifiers should have correct prefix.
 dotnet_diagnostic.CA1716.severity = none    # Identifiers should not match keywords.
 dotnet_diagnostic.CA1720.severity = none    # Identifiers should not contain type names.
+dotnet_diagnostic.CA2000.severity = suggestion # Dispose objects before losing scope.
+dotnet_diagnostic.CA2213.severity = suggestion # Disposable fields should be disposed.
 
 # Stylecop Analyzers.
 dotnet_diagnostic.SA1000.severity = none    # The spacing around a C# keyword is incorrect.
