--- a/Redzen/Redzen.csproj
+++ b/Redzen/Redzen.csproj
@@ -10,8 +10,8 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>14.0.0-20221228-1418</Version>
-    <Copyright>Copyright Colin D. Green 2015-2022</Copyright>
+    <Version>14.0.0</Version>
+    <Copyright>Copyright Colin D. Green 2015-2023</Copyright>
     <Description>General purpose C# code library.</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/colgreen/Redzen</PackageProjectUrl>
