--- a/Redzen/Redzen.csproj
+++ b/Redzen/Redzen.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>15.0.0-20230722-01</Version>
+    <Version>15.0.0</Version>
     <Copyright>Copyright Colin D. Green 2015-2023</Copyright>
     <Description>General purpose C# code library.</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -20,7 +20,15 @@
     <PackageTags>C# .NET rng prng ziggurat gaussian io sorting timsort xoshiro wyrand random math numerics</PackageTags>
 	<PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageReleaseNotes>
-
+- Target framework updated to net7.0.
+- Generic Math
+  - MathSpan: Use of generic math in method signatures and implementations.
+  - FloatUtils supersedes DoubleUtils/SingleUtils.
+  - DiscreteDistribution{T} supersedes Double/Single.DiscreteDistribution.
+  - DiscreteDistribution{T}: added Sample() method, to replace DiscreteDistributionUtils/Sample() static method.
+  - Added NumericsUtils.StochasticRound{T}()
+  - IRandomSource: Added NextHalf(), NextHalfNonZero(), NextUnitInterval{T}(), NextUnitIntervalNonZero{T}().
+  - CircularBufferWithStats{T} supersedes CircularBufferWithStats (that provided double precision stats only).
     </PackageReleaseNotes>
     <Authors>Colin D. Green</Authors>
     <NeutralLanguage>en</NeutralLanguage>
