--- a/Redzen.Tests/Redzen.Tests.csproj
+++ b/Redzen.Tests/Redzen.Tests.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="[7.0.0]" />
+    <PackageReference Include="FluentAssertions" Version="7.2.0" />
     <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageReference Include="xunit" Version="2.9.3" />
